# dadenegar-interview-task

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt  shell.py
FormFlow/: asgi.py  celery.py  local_settings.py.dev  settings.py  setup_urls.py  urls.py  wsgi.py
FormFlow/api/v1/: private_urls.py  urls.py
authentication/: actions.py  admin.py  apps.py  constants.py  grants.py  groups.py  messages.py  middleware.py  models.ini  serializers.py  tasks.py  views.py
authentication/migrations/: 0001_initial.py
authentication/models/: __init__.py  access_token.py  action.py  credential.py  grant.py  group.py  log.py  membership.py  otp.py  refresh_token.py  user.py
authentication/urls/: private_urls.py  public_urls.py
core/: __init__.py  email.py  messages.py  permissions.py  prepare_data.py  responses.py  serializers.py  sms.py  validators.py  views.py
core/models/: __init__.py  builders.py
scripts/: create-db.sh  local-remigrate.sh  remigrate.sh
survey/: serializers.py  tasks.py  views.py
survey/migrations/: 0001_initial.py  0002_multiplechoicequestion_choices.py
survey/models/: __init__.py  form.py  response.py
survey/models/answer/: __init__.py  answer.py  matrix_answer.py  multiple_choice_answer.py  rating_answer.py  text_answer.py
survey/models/question/: __init__.py  matrix_question.py  multiple_choice_question.py  question.py  rating_question.py  text_question.py
survey/urls/: private_urls.py
